[gd_scene load_steps=4 format=3 uid="uid://bed5ijmikyryd"]

[ext_resource type="Script" uid="uid://gsl75p7wrttt" path="res://world/DroppedItem.gd" id="1_sn3gv"]
[ext_resource type="Texture2D" uid="uid://bs3pqk2i5iih8" path="res://assets/Items/Food/Meat.png" id="2_txuh2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a64hr"]
radius = 9.0

[node name="DroppedItem" type="Area2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_sn3gv")

[node name="PickupArea" type="CollisionShape2D" parent="."]
position = Vector2(6, 6)
shape = SubResource("CircleShape2D_a64hr")

[node name="ItemSprite" type="TextureRect" parent="."]
custom_minimum_size = Vector2(10, 10)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_txuh2")
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 5.0
offset_right = 24.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 9
text = "99"
horizontal_alignment = 1
vertical_alignment = 2

[node name="PromptLabel" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -12.0
offset_right = 130.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 9
text = "Take  [F]"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
